# double-entry-billing-system

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
billing/: admin.py  models.py  schema.py  tests.py  urls.py  views.py
billing/migrations/: 0001_initial.py
billing/services/: ledger_service.py  metering.py
billing/templates/billing/: dashboard.html
ledgerbill/: asgi.py  settings.py  wsgi.py
